Added to Flexbox

--- a/main_page.css
+++ b/main_page.css
@@ -3,7 +3,8 @@
     .container {
 
     display: inline-flex;
-    flex-direction:right;
+    flex-direction:wrap;
+    justify-content: center;
 }
 
 .p {
