--- a/main_page.css
+++ b/main_page.css
@@ -1,10 +1,24 @@
+@media (min-width:769px) {
+
+    .main-nav{
+        display:flex;
+        flex-direction:column;
+    }
+}
+
+
 @media screen and (max-width:780px)
 {
     .container {
 
-    display: inline-flex;
-    flex-direction:wrap;
+    display:flex;
+    flex-direction:column;
     justify-content: center;
+}
+
+.item-2 {
+    flex:-2,50%;
+    align-items:center;
 }
 
 .p {
