--- a/main_page.css
+++ b/main_page.css
@@ -1,5 +1,6 @@
 @media (min-width:769px) {
 
+    .container,
     .main-nav{
         display:flex;
         flex-direction:row;
@@ -12,13 +13,13 @@
     .container {
 
     display:flex;
-    flex-direction:column;
-    justify-content: center;
+    flex-direction:row;
+    justify-content: space-between;
 }
 
 .item-2 {
-    flex:-2,50%;
-    align-items:center;
+    flex:1,50%;
+    display:inline-flex;
 }
 
 .p {
