Added better forms, CSS

--- a/main_page.css
+++ b/main_page.css
@@ -15,7 +15,7 @@
     display:flex;
     flex-direction:row;
     justify-content: space-between;
-}
+
 
 .item-2 {
     flex:1,50%;
@@ -28,31 +28,34 @@ font-size:15px;
 font-family:'Arial';
 
 }
-
-.background-color {
-
-
-    color:green;
-
+input,
+textarea  {
+  outline: 0;
+	border: none;
+	padding: 15px;
+	border-radius: .3em;
+	border-bottom: 3px solid rgba(0,0,0,0.05);
+}
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea {
+	font-size: 1em;
+  color: #222;
+  font-weight: 300; 
+  width: 100%;
+  height: auto;
+  margin-bottom: 1.2em;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.08) inset;
+}
+form > a {
+  font-size: .85em;
+}
+input[type="checkbox"] + label {
+  font-weight: 300;
+	font-size: .85em;
+  display: inline;
+	padding-left: 5px;
 }
 
-.center-info {
-
-    float:center;
-}
-
-.button {
-
-    color: aliceblue;
-    padding: 0%;
-    font-size:1em ;
-    background-color: aliceblue;
-}
-
-input[type="button"], {
-
-    cursor:pointer;
-}
-
-
-}
+    }
