--- a/grid.css
+++ b/grid.css
@@ -1,10 +1,11 @@
 /* GRID LAYOUT */
-
+body {background-color: #333333;}
+h1, h2 ,h3, p , ul , ol{
+    color:white;
+}
 .grid {
-    max-width: 800px;
-    display: grid;
-    grid-template-columns:1fr, 2fr, 1fr;
-    grid-template-rows: repeat(4,1fr);
+    display:grid
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap:15px;
 }
 
