--- a/grid.css
+++ b/grid.css
@@ -10,6 +10,10 @@ h1, h2 ,h3 ,h4  {
 
 }
 
+div:nth-child(2) {
+    border: 1px red;
+}
+
 img {
     display:center;
 }
@@ -38,11 +42,16 @@ li a:hover {
     color:black;
 }
 
+
+/* Grid CSS  */
 .grid {
     display:grid;
-    grid-template-columns: 1fr 1fr ;
-    grid-template-rows: repeat (auto-fit 5 1fr);
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat (4 1fr);
     grid-gap:15px;
+    grid-auto-rows: 1fr;
+    grid-auto-columns: minmax(300px);
+    grid-auto-flow: row;
 }
 
 .sr-only {
