--- a/main_page.css
+++ b/main_page.css
@@ -22,27 +22,6 @@ html {
     box-sizing: inherit;
   }
   
-.menu-btn {
-  position:relative;
-  display: flex;
-  justify-content: center;
-  align-items:center;
-  width:80px;
-  height:80px;
-  cursor: pointer;
-  border :3px solid #ffffff;
-  
-}
-
-.menu-button-burger::before {
-  transform:translateY(-16px);
-  
-}
-
-.menu-button-burger::after {
-  transform:translateY(16px);
-  
-}
 
   body {
     background: #999;
@@ -87,7 +66,7 @@ html {
     display: block;
     margin-bottom: 10px;
     padding: 15px 0;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     font-weight: bold;
     color: white;
@@ -124,23 +103,22 @@ html {
 
   /*Media Queries*/
   
-  @media only screen and (min-width: 480px) {
+  @media only screen and (min-width: 769px) {
   
-    nav a {
-      float: left;
-      width: 30%;
-      margin: 0 0 0 5%;
-      padding: 25px 1%;
-      margin-bottom: 0;
+   * {
+     display:flex;
+   }
+  
+    nav ,div {
+      flex-direction: column;
+      align-items:center;
     }
   
-    nav li:first-child a {
-      margin-left: 0;
-    }
-  
-    nav li:last-child a {
-      margin-right: 0;
-    }
+.item {
+  max-width:450px;
+}
+
+   
   
   }
   
@@ -153,7 +131,8 @@ html {
     }
   
     nav {
-      float: right;
+      display:flex;
+      flex-direction: right;
       width: 60%;
     }
   
@@ -161,17 +140,6 @@ html {
       padding: 15px 1%;
     }
   
-    .main article {
-      float: left;
-      width: 57%;
-    }
-  
-    .main aside {
-      float: right;
-      width: 38%;
-    }
-    
-  }
   
   @media only screen and (min-width: 1140px) {
   
