--- a/grid.css
+++ b/grid.css
@@ -154,7 +154,7 @@ li a:hover {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat (4 1fr);
     grid-gap:15px;
-    grid-auto-rows: 1fr;
+    grid-auto-rows: repeat(auto-fill, 1fr);
     grid-auto-columns: minmax(300px);
     grid-auto-flow: row;
 }
