Revised index.html in order to create more CSS Grid

--- a/grid.css
+++ b/grid.css
@@ -1,4 +1,4 @@
-
+  
     * {
         margin:0;
         padding:0;
@@ -10,58 +10,36 @@
       body {
         font-family: 'Tajawal', sans-serif;
         font-size: 18px;
-      }
+      } 
   
-      
-html {
-    color: whitesmoke;
-    font-size: 1em;
-    line-height: 1.4;
-    box-sizing: border-box;
-  }
-  /*Media Queries*/
-  
-  @media only screen and (min-width: 480px) {
-    
-    
-    grid{
-    display: inline-block;
-    }
+/*
+  Media Queries*/
+
 
   @media only screen and (min-width: 700px) and (orientation: landscape) {
              
-          
-    .title {
-      float: left;
-      font-size: 1.4em;
-    }
   
     nav {
       float: right;
-      width: 60%;
+      width: 100%;
     }
   
     nav a {
       padding: 15px 1%;
     }
-  
-    .main article {
-      float: left;
-      width: 57%;
-    }
-  
-    .main aside {
-      float: right;
-      width: 38%;
-    }
     
+    .body {
+      font-size:20px;
+    }
+  
+ 
   }
   
   @media only screen and (min-width: 1140px) {
   
-    .wrapper {
-      width: 1026px;
-      margin: 0 auto;
+    body {
+      font-family: 'Tajawal', sans-serif;
+      font-size: 18px;
     }
   
     .title {
@@ -69,10 +47,11 @@ html {
     }
   
     nav a {
-      padding: 25px 1%;
+      padding: 25px;
     }
     
   }
+
 
 /* 
   Nav Bar */
@@ -103,25 +82,6 @@ html {
     text-decoration: underline;
   }
   
-/* GRID LAYOUT */
-body {background-color: #333333;}
-*{
-    color:white;
-    
-}
-
-h1, h2 ,h3 ,h4  {
-    text-align:center;
-
-}
-
-div:nth-child(2) {
-    border: 1px red;
-}
-
-img {
-    display:center;
-}
 
 /*Nav Bar Layout!*/
 
@@ -145,25 +105,14 @@ li a {
 li a:hover {
     background-color: whitesmoke;
     color:black;
-}
+} */
 
 
 /* Grid CSS  */
-.grid {
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat (4 1fr);
-    grid-gap:15px;
-    grid-auto-rows: repeat(auto-fill, 1fr);
-    grid-auto-columns: minmax(300px);
-    grid-auto-flow: row;
-}
 
-.sr-only {
-    color:white;
+body {
+  display: grid;
+  grid-template-columns: 1fr 200px;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
 }
-
-.form-h1 {
-    left: margin 0;
-}
-
