--- a/revised.css
+++ b/revised.css
@@ -9,7 +9,7 @@ body {
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -116,4 +116,8 @@ label {
 
   display:block;
 
+}
+
+h1,h2,h3 {
+  text-align: center;
 }
